force-app/main/default/objects/Broker__c/fields/Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Status__c</fullName>
    <label>Work Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>